--- a/app/src/main/res/layouts/home/layout/appbar_connect.xml
+++ b/app/src/main/res/layouts/home/layout/appbar_connect.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:layout_height="55dp"
     android:orientation="horizontal"
     android:gravity="center"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
-    android:layout_height="wrap_content"
     android:background="@color/backround_button_dark_1_startColor">
 
     <ImageButton
