--- a/app/src/main/res/layout/activity_on_chat.xml
+++ b/app/src/main/res/layout/activity_on_chat.xml
@@ -13,7 +13,6 @@
             android:layout_width="match_parent"
             android:theme="@style/Theme.Fimae.AppBarOverlay"
     >
-
         <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
@@ -47,13 +46,91 @@
 
     </com.google.android.material.appbar.AppBarLayout>
     <androidx.recyclerview.widget.RecyclerView
+            app:reverseLayout="false"
             android:id="@+id/list_messages"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@+id/appbar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:divider="@null"
             android:dividerHeight="0dp"
-    />
+            app:layout_constraintBottom_toTopOf="@+id/input_layout"/>
+    <LinearLayout
+            android:id="@+id/input_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:orientation="vertical">
+        <LinearLayout
+                android:gravity="center_vertical"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+
+        >
+            <ImageView
+                    android:layout_margin="14dp"
+                    android:id="@+id/btn_micro"
+                    android:layout_width="26dp"
+                    android:layout_height="26dp"
+                    android:src="@drawable/ic_micro"
+                    android:clickable="true" android:focusable="true"/>
+
+            <EditText
+                    android:id="@+id/et_input"
+                    android:background="@drawable/shape_rectangle_border_radius_text"
+                    android:padding="10dp"
+                    android:backgroundTint="@color/backround_button_1"
+                    android:hint="Soạn tin nhắn..."
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+            />
+            <ImageView
+                    android:layout_margin="14dp"
+                    android:inputType="textShortMessage"
+                    android:id="@+id/btn_emoji"
+                    android:layout_width="26dp"
+                    android:layout_height="26dp"
+                    android:src="@drawable/ic_smile"
+                    android:clickable="true" android:focusable="true"/>
+
+            <ImageView
+                    android:layout_margin="14dp"
+                    android:id="@+id/btn_add"
+                    android:layout_width="26dp"
+                    android:layout_height="26dp"
+                    android:src="@drawable/ic_plus_circle"
+                    android:clickable="true" android:focusable="true"/>
+        </LinearLayout>
+        <LinearLayout
+                android:id="@+id/input_media_layout"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+        >
+            <ImageView
+                    android:id="@+id/btn_galllery"
+                    android:layout_margin="10dp"
+                    android:background="@color/gray_400"
+                    android:padding="20dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:src="@drawable/ic_gallery_blur"
+                    android:clickable="true" android:focusable="true"/>
+
+            <ImageView
+                    android:id="@+id/btn_camera"
+                    android:layout_margin="10dp"
+                    android:background="@color/gray_400"
+                    android:padding="20dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:src="@drawable/ic_camera"
+                    android:clickable="true" android:focusable="true"/>
+        </LinearLayout>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
