--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -4,16 +4,16 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".activities.ChatActivity">
+        android:layout_height="match_parent">
     <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appbar"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_height="wrap_content"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             app:elevation="0dp"
-            android:theme="@style/Theme.Fimae.NoActionBar">
-
+            android:theme="@style/Theme.Fimae.NoActionBar"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
         <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
@@ -30,7 +30,8 @@
                     android:layout_gravity="center"
                     android:text="@string/app_name"
                     android:textColor="@color/primary_1"
-                    style="@style/bold_24"/>
+
+            />
 
         </androidx.appcompat.widget.Toolbar>
 
@@ -58,15 +59,15 @@
                 android:layout_marginEnd="12dp"
         />
         <TextView
+                android:id="@+id/search_title"
                 android:layout_width="wrap_content"
-                style="@style/regular_14"
                 android:textColor="@color/text_secondary"
                 android:layout_height="wrap_content"
                 android:text="Tìm kiếm lịch sử cuộc trò chuyện"
         />
     </LinearLayout>
-    <ListView
-            android:id="@+id/list_view"
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/list_user"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/search_bar"
