--- a/app/src/main/res/menu/chat_second_menu.xml
+++ b/app/src/main/res/menu/chat_second_menu.xml
@@ -2,15 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-            android:id="@+id/action_call"
+            android:id="@+id/option_call"
             android:icon="@drawable/ic_call_in_chat"
-            app:showAsAction="ifRoom" android:title="Call"
+            app:showAsAction="ifRoom"
+            android:title="Call"
             android:tooltipText="Call"
     />
     <item
-            android:id="@+id/action_more"
+            android:id="@+id/option_more"
             android:icon="@drawable/ic_more_circle"
-            app:showAsAction="ifRoom" android:title="More"
+            app:showAsAction="ifRoom"
+            android:title="More"
             android:tooltipText="More"
     />
 </menu>
