--- a/app/src/main/res/layout/fragment_item_list_dialog_list_dialog_item.xml
+++ b/app/src/main/res/layout/fragment_item_list_dialog_list_dialog_item.xml
@@ -1,52 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.cardview.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
-          android:id="@+id/text"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:textAppearance="@style/TextAppearance.AppCompat.Large"
-          android:background="?attr/selectableItemBackground"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/media_item_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="0dp"
+        android:background="?attr/selectableItemBackground"
+        android:layout_margin="2dp">
 
-            android:layout_margin="2dp"
-          tools:text="Hello">
-    <ImageView
-            app:layout_constraintDimensionRatio="H,1:1"
-            android:background="@color/black"
-            android:layout_width="0dp" android:layout_height="0dp"
-            android:src="@drawable/ic_video_call_color"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:scaleType="fitCenter"
-            android:id="@+id/imageView"/>
-    <TextView
-            android:id="@+id/picked_index"
-            android:layout_margin="5dp"
-            android:paddingHorizontal="5dp"
-            app:layout_constraintDimensionRatio="W,1:1"
-            android:gravity="center"
-            android:background="@drawable/shape_circle_green"
-            android:text="99"
-            android:textSize="14dp"
-            android:textStyle="bold"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            app:layout_constraintEnd_toEndOf="@+id/imageView"
-            app:layout_constraintTop_toTopOf="@+id/imageView"/>
-    <TextView
-            android:id="@+id/video_duration"
-            android:layout_margin="5dp"
-            android:paddingHorizontal="8dp"
-            android:paddingVertical="2dp"
-            android:gravity="center"
-            android:background="@drawable/shape_gender_border_blue"
-            android:text="03:40"
-            android:textSize="12dp"
-            android:textStyle="bold"
-            android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/imageView"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView"/>
+            android:textAppearance="@style/TextAppearance.AppCompat.Large">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <!-- Add your views here -->
+
+        <ImageView
+                app:layout_constraintDimensionRatio="H,1:1"
+                android:background="@color/black"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:src="@drawable/ic_video_call_color"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:scaleType="fitCenter"
+                android:id="@+id/imageView"/>
+
+        <TextView
+                android:id="@+id/picked_index"
+                android:layout_margin="5dp"
+                android:paddingHorizontal="5dp"
+                app:layout_constraintDimensionRatio="W,1:1"
+                android:gravity="center"
+                android:background="@drawable/shape_circle_green"
+                android:text="99"
+                android:textSize="14dp"
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                app:layout_constraintEnd_toEndOf="@+id/imageView"
+                app:layout_constraintTop_toTopOf="@+id/imageView"/>
+
+        <TextView
+                android:id="@+id/video_duration"
+                android:layout_margin="5dp"
+                android:paddingHorizontal="8dp"
+                android:paddingVertical="2dp"
+                android:gravity="center"
+                android:background="@drawable/shape_gender_border_blue"
+                android:text="03:40"
+                android:textSize="12dp"
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@+id/imageView"
+                app:layout_constraintBottom_toBottomOf="@+id/imageView"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.cardview.widget.CardView>
