--- a/app/src/main/res/layout/receiver_message.xml
+++ b/app/src/main/res/layout/receiver_message.xml
@@ -3,12 +3,11 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_marginVertical="3dp"
         android:maxWidth="250dp"
-        android:maxHeight="350dp"
         android:minWidth="50dp"
         android:minHeight="40dp"
 >
@@ -19,21 +18,33 @@
             android:src="@drawable/ic_default_avatar"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
-    <TextView
-            android:id="@+id/incoming_msg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:background="@drawable/bubble_sender"
-            android:backgroundTint="@color/gray_400"
-            android:padding="10dp"
-            android:inputType="textLongMessage|textMultiLine"
-            android:maxWidth="180dp"
-            android:minWidth="30dp"
-            android:text="This is a message"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/avatar_image_view"/>
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="0dp" android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/avatar_image_view"
+            app:layout_constraintTop_toTopOf="parent">
+        <TextView
+                android:id="@+id/incoming_msg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:background="@drawable/bubble_sender"
+                android:backgroundTint="@color/gray_400"
+                android:padding="10dp"
+                android:inputType="textLongMessage|textMultiLine"
+                android:maxWidth="180dp"
+                android:minWidth="30dp"
+                android:text="This is a message"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/avatar_image_view"/>
 
-
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/list_images"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toStartOf="@+id/avatar_image_view"
+                app:layout_constraintTop_toBottomOf="@+id/incoming_msg" app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/avatar_image_view"/>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
