--- a/app/src/main/res/layout/sender_message.xml
+++ b/app/src/main/res/layout/sender_message.xml
@@ -1,47 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
->
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
+    <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:gravity="end"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_marginVertical="3dp"
-            android:maxWidth="250dp"
-            android:maxHeight="350dp"
-            android:minWidth="50dp"
-            android:minHeight="40dp"
-            app:layout_constraintEnd_toEndOf="parent">
-
-        <TextView
-                android:id="@+id/outgoing_msg"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/text_white"
-                android:background="@drawable/bubble_sender"
-                android:padding="10dp"
-                android:inputType="textLongMessage|textMultiLine"
-                android:maxWidth="180dp"
+            app:layout_constraintEnd_toEndOf="parent" android:orientation="horizontal">
+        <LinearLayout
+                android:gravity="end"
+                android:paddingStart="130dp"
+                android:orientation="vertical"
                 android:minWidth="30dp"
-                android:text="This is a message"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="@id/outgoing_msg"
-        />
-        <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/avatar_image_view"
-                android:layout_width="44dp"
-                android:layout_height="44dp"
-                android:src="@drawable/ic_default_avatar"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@id/outgoing_msg"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toStartOf="@+id/avatar_image_view"
+                app:layout_constraintTop_toTopOf="parent">
+            <TextView
+                    android:id="@+id/outgoing_msg"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/text_white"
+                    android:background="@drawable/bubble_sender"
+                    android:padding="10dp"
+                    android:minWidth="30dp"
+                    android:inputType="textLongMessage|textMultiLine"
+                    android:text="This is a message"
+            />
+            <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/list_images"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/outgoing_msg"
+                    app:layout_constraintEnd_toStartOf="@+id/avatar_image_view"/>
+        </LinearLayout>
+    </LinearLayout>
 
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-</RelativeLayout>
