--- a/app/src/main/res/layout/post_image_item.xml
+++ b/app/src/main/res/layout/post_image_item.xml
@@ -24,6 +24,17 @@
             android:layout_gravity="center_vertical"
             />
     </FrameLayout>
+
+    <ImageButton
+        android:id="@+id/btn_close"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginStart="15dp"
+        android:background="@drawable/ic_close"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -38,7 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="start"
-            android:text="Chuyện nhà mèo"
+            android:text=""
             android:textColor="@color/text_white"
             style="@style/bold_20" />
         <TextView
@@ -47,7 +58,7 @@
             android:layout_height="wrap_content"
             android:gravity="start"
             android:layout_marginTop="5dp"
-            android:text="Bộ sưu tập những cảnh quay đáng yêu và đầy hài hước về các chú mèo dễ thương."
+            android:text=""
             android:textColor="@color/text_white"
             style="@style/regular_16" />
     </LinearLayout>
