--- a/app/src/main/res/layout/activity_chat_random.xml
+++ b/app/src/main/res/layout/activity_chat_random.xml
@@ -44,6 +44,22 @@
                 android:textColor="@color/secondary_1" />
         </FrameLayout>
     </LinearLayout>
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/random_chat_recycler_view"
+        app:layout_constraintVertical_weight="1"
+        app:reverseLayout="false"
+        android:layout_width="match_parent"
+        android:dividerHeight="0dp"
+        android:divider="@null"
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/layout_top"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/input_layout"/>
+
     <ImageButton
         android:layout_gravity="end"
         android:id="@+id/btn_chat_like"
@@ -55,23 +71,6 @@
         app:layout_constraintTop_toBottomOf="@+id/layout_top"
         app:layout_constraintEnd_toEndOf="parent"
         android:padding="0dp" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/list_messages"
-        app:layout_constraintVertical_weight="1"
-        app:reverseLayout="false"
-        android:layout_width="match_parent"
-        android:dividerHeight="0dp"
-        android:divider="@null"
-        android:layout_height="0dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/layout_top"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/input_layout"
-        tools:listitem="@layout/receiver_message"/>
-
-
     <LinearLayout
         android:id="@+id/input_layout"
         android:layout_width="match_parent"
@@ -94,7 +93,7 @@
                 android:padding="10dp"
                 android:backgroundTint="@color/background_button_dark_3"
                 android:hint="Soạn tin nhắn..."
-                android:textColor="@color/text_primary"
+                android:textColor="@color/white"
                 android:textColorHint="@color/white"
                 android:textColorHighlight="@color/white"
                 android:layout_height="wrap_content"
@@ -110,7 +109,8 @@
                 android:layout_height="34dp"
                 android:src="@drawable/ic_paper_plane"
                 app:tint="@color/white"
-                android:clickable="true" android:focusable="true"/>
+                android:clickable="true"
+                android:focusable="true"/>
         </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
