--- a/app/src/main/res/layout/bottom_sheet_comment_short.xml
+++ b/app/src/main/res/layout/bottom_sheet_comment_short.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/shape_rectangle_border_radius_white"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="550dp"
     app:behavior_hideable="true"
     app:behavior_peekHeight="0dp"
-    android:minHeight="500dp"
+    android:minHeight="550dp"
+    android:maxHeight="550dp"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
     <TextView
@@ -36,10 +37,12 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_comments"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="1dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title_comment"
+        app:layout_constraintBottom_toTopOf="@+id/bottom"
         />
 
     <ImageView
