--- a/app/src/main/res/layout/layout_reel.xml
+++ b/app/src/main/res/layout/layout_reel.xml
@@ -13,7 +13,6 @@
         android:background="@color/black"
         >
 
-
         <VideoView
             android:id="@+id/videoView"
             android:layout_width="match_parent"
@@ -26,7 +25,7 @@
 
         <ImageView
             android:id="@+id/image_thumb"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
