--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -17,10 +17,19 @@
     </declare-styleable>
 
     <declare-styleable name="PostMessage">
-        <attr name="title" format="string" />
+        <attr name="post_title" format="string" />
         <attr name="label_button" format="string" />
         <attr name="image" format="string" />
         <attr name="link" format="string" />
         <attr name="isSender" format="boolean" />
+    </declare-styleable>
+    <declare-styleable name="ListTile">
+        <attr name="leadingIcon" format="reference" />
+        <attr name="title" format="string" />
+        <attr name="subtitle" format="string" />
+        <attr name="trailingIcon" format="reference" />
+        <attr name="leadingIconVisibility" format="boolean" />
+        <attr name="trailingIconVisibility" format="boolean" />
+        <attr name="subtitleVisibility" format="boolean" />
     </declare-styleable>
 </resources>
